Route PulseAudio control through linker64